refactor: se agrega el nombre de yperez y código de carnet al archivo index.html

--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
     <h2>
         Código de Carnet: 2025361
     </h2>
+
+    <h1>
+        Yubin Emanuel Pérez Oajaca
+    </h1>
+
+    <h2>
+        Código de Carnet: 2025291
+    </h2>
 </body>
 </html>
